--- a/index.html
+++ b/index.html
@@ -18,10 +18,10 @@
 		<div id="side-header">
 			<p><img id="slogan" src ="img/its_heaven_in_hells_kitchen.png" alt="it's heaven in hell's kitchen" /> </p>
 			<div id="social-icons">
-				<a href="#"><img class="social-icon-img" src ="img/facebook.png" alt="social-icon-facebook" /></a>
-				<a href="#"><img class="social-icon-img" src ="img/googleplus.png" alt="social-icon-googleplus" /></a>
-				<a href="#"><img class="social-icon-img" src ="img/instagram.png" alt="social-icon-instagram" /></a>
-				<a href="#"><img class="social-icon-img" src ="img/twitter.png" alt="social-icon-twitter" /></a>
+				<a href="https://www.facebook.com/w42st"><img class="social-icon-img" src ="img/facebook.png" alt="social-icon-facebook" /></a>
+				<a href="https://plus.google.com/108593673981516853631/"><img class="social-icon-img" src ="img/googleplus.png" alt="social-icon-googleplus" /></a>
+				<a href="http://instagram.com/w42st"><img class="social-icon-img" src ="img/instagram.png" alt="social-icon-instagram" /></a>
+				<a href="https://twitter.com/w42st"><img class="social-icon-img" src ="img/twitter.png" alt="social-icon-twitter" /></a>
 			</div>
 		</div>
 	</header>
@@ -109,28 +109,6 @@
 					consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
 					cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
 					proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p><br>
-
-					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-					tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-					quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-					consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-					cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-					proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p><br>
-
-					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-					tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-					quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-					consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-					cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-					proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p><br>
-
-					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-					tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-					quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-					consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-					cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-					proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-
 
 				</div>
 			</div>		
