changed issuu vars

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 					    <param name="scale" value="noscale">
 					    <param name="wmode" value="transparent">
 					    <param name="allowscriptaccess" value="always">
-					    <param name="flashvars" value="mode=window&amp;pageNumber=1&amp;jsAPIClientDomain=issuu.com&amp;jsAPIInitCallback=jsAPIInitCallback&amp;jsInternalCallback=jsInternalCallback&amp;language=en&amp;viewMode=doublePage&amp;name=&amp;username=&amp;creator=&amp;printButtonEnabled=&amp;documentId=141111175656-72e6706c6a16a7f72d08166d97fe4964&amp;theme=flypaper&amp;watermarkEnabled=false&amp;defaultNavBarEnabled=false&amp;actionBarEnabled=false&amp;defaultDockEnabled=false&amp;backgroundColor=%23253139&amp;preloaderBackground=%23253139">
+                        <param name="flashvars" value="mode=mini&amp;jsAPIClientDomain=localhost&amp;jsAPIInitCallback=issuuflashEmbedOnInit051338851219043136&amp;bl_referrer=http%3A%2F%2Flocalhost%3A63342%2Fw42st.github.io%2Findex.html&amp;embedBackground=%23baa58b&amp;pageNumber=2&amp;shareMenuEnabled=false&amp;clippingEnabled=false&amp;backgroundImage=&amp;backgroundStretch=true&amp;layout=&amp;documentId=141111175656-72e6706c6a16a7f72d08166d97fe4964&amp;embedId=14334378/10334713">
 					</object>
 				</div>
 			</div>
