--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 		<div id="right-panel">
 			<div id="facebook-feed">
 				<div id="facebook-feed-container">
-                    <script type="text/javascript" class="rebelmouse-embed-script" src="https://www.rebelmouse.com/static/js-build/embed/embed.js?site=w42st&height=800&flexible=0&dont_load_new_posts=0&more_button=0&post_limit=5&embed_type=sidebar&scrollbar_theme=light-2&show_rebelnav=0"></script>
+                    <script type="text/javascript" class="rebelmouse-embed-script" src="https://www.rebelmouse.com/static/js-build/embed/embed.js?site=w42st&height=800&flexible=0&dont_load_new_posts=0&more_button=0&post_limit=5&embed_type=sidebar&scrollbar_theme=default&show_rebelnav=0&theme=2002"></script>
                 </div>
 			</div>		
 		</div>
