--- a/index.html
+++ b/index.html
@@ -33,17 +33,9 @@
 			<div id="this-issue">
 				<p><img class="this-issue-header" src ="img/this-issue.png" alt="this-issue" /></p>
 				<div id="issue-container">
-					<object type="application/x-shockwave-flash" id="flashcontent" name="flashcontent" data="http://static.issuu.com/webembed/viewers/style1/v2/IssuuReader.swf" width="100%" height="100%" style="visibility: visible;">
-					    <param name="movie" value="http://static.issuu.com/webembed/viewers/style1/v2/IssuuReader.swf">
-					    <param name="allowfullscreen" value="true">
-					    <param name="menu" value="false">
-					    <param name="salign" value="tl">
-					    <param name="scale" value="noscale">
-					    <param name="wmode" value="transparent">
-					    <param name="allowscriptaccess" value="always">
-                        <param name="flashvars" value="mode=mini&amp;jsAPIClientDomain=localhost&amp;jsAPIInitCallback=issuuflashEmbedOnInit051338851219043136&amp;bl_referrer=http%3A%2F%2Flocalhost%3A63342%2Fw42st.github.io%2Findex.html&amp;embedBackground=%23baa58b&amp;pageNumber=2&amp;shareMenuEnabled=false&amp;clippingEnabled=false&amp;backgroundImage=&amp;backgroundStretch=true&amp;layout=&amp;documentId=141111175656-72e6706c6a16a7f72d08166d97fe4964&amp;embedId=14334378/10334713">
-					</object>
-				</div>
+                    <div data-configid="14334378/10334713" style="width: 100%; height: 100%;" class="issuuembed"></div>
+                    <script type="text/javascript" src="//e.issuu.com/embed.js" async="true"></script>
+                </div>
 			</div>
 
 			<div id="about-us">
