added about us text

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 			<div id="about-us">
 				<div id="about-us-container">
 					<p><img class="about-us-header" src ="img/about-us.png" alt="about-us" /></p>
-					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+					<p>W42ST is a magazine, a Facebook page, Twitter and Instagram feeds and more besides – holding all these elements together are some people. We are all about Hell’s Kitchen, we live it, breathe it, drive it and are driven by it, we record it and report it. The magazine is available FREE in the tower lobbies & apartments, stores & markets,  hairdressers, restaurants, bars, delis, and diners all across the area. Our social media is updated constantly and is commented by the residents of Hell’s Kitchen whose lives we are on a mission to improve… through information, entertainment, through words and pictures. Get in touch to tell us what you like and what you'd like to see next.</p>
 				</div>
 			</div>
 
