--- a/index.html
+++ b/index.html
@@ -7,8 +7,39 @@
     <link rel="icon" href="/img/favicon.png">
 	<link rel="stylesheet" href="css/style.css">
 	<link href='http://fonts.googleapis.com/css?family=Open+Sans:300,600,800' rel='stylesheet' type='text/css'>
-	<script src="http://code.jquery.com/jquery-latest.js"></script>
+	<script src="js/jquery-1.9.1.min.js"></script>
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+    <script>
+
+        function set_elements_height() {
+            var windowH = $(window).height();
+            var headerH = windowH * 0.15;
+            var logoH = headerH-40;
+            var sideElementH = (logoH-20)/2;
+
+            var aboutH = $('#about-us').height();
+            var panelH = $('#left-panel').height();
+            var issueH = panelH - aboutH - 112;
+
+            $('header').css('height',headerH);
+            $('#logo').css('height',logoH);
+            $('#logo').css('padding', '20px');
+            $('#slogan').css('height',sideElementH);
+            $('.social-icon-img').css('height',sideElementH);
+            $('#issue-container').css('height',issueH);
+        }
+
+        $(document).ready(function() {
+            set_elements_height();
+        });
+
+        window.onresize = function(event) {
+            set_elements_height();
+        };
+
+
+    </script>
 
 </head>
 <body>
@@ -50,10 +81,11 @@
 
 		<div id="right-panel">
 			<div id="facebook-feed">
-				<div id="facebook-feed-container">
-                    <script type="text/javascript" class="rebelmouse-embed-script" src="https://www.rebelmouse.com/static/js-build/embed/embed.js?site=w42st&height=800&flexible=0&dont_load_new_posts=0&more_button=0&post_limit=5&embed_type=sidebar&scrollbar_theme=default&show_rebelnav=0&theme=2002"></script>
-                </div>
-			</div>		
+                <!--<div id="facebook-feed-container">-->
+                    <!--<script type="text/javascript" class="rebelmouse-embed-script" src="https://www.rebelmouse.com/static/js-build/embed/embed.js?site=w42st&height=800&flexible=0&dont_load_new_posts=0&more_button=0&post_limit=5&embed_type=sidebar&scrollbar_theme=default&show_rebelnav=0&theme=2002"></script>-->
+                    <iframe name="feed-holder" id="feed-holder" src="social.html" noresize="yes" frameborder="0" marginheight="0" marginwidth="0" scrolling="no" />
+                <!--</div>-->
+			</div>
 		</div>
 	</div>	
 		
@@ -62,38 +94,6 @@
 		
 	</footer>
 
-
-
-<script>
-
-	function set_elements_height() {
-		var windowH = $(window).height();
-	   var headerH = windowH * 0.15;
-	   var logoH = headerH-40;
-	   var sideElementH = (logoH-20)/2;
-	   
-	   var aboutH = $('#about-us').height();
-	   var panelH = $('#left-panel').height();
-	   var issueH = panelH - aboutH - 112;
-	   
-	   $('header').css('height',headerH); 
-	   $('#logo').css('height',logoH);
-	   $('#logo').css('padding', '20px'); 
-	   $('#slogan').css('height',sideElementH);
-	   $('.social-icon-img').css('height',sideElementH);
-	   $('#issue-container').css('height',issueH);
-	}
-
-	$(document).ready(function() {
-	   set_elements_height();
-	 });
-
-	window.onresize = function(event) {
-    set_elements_height();
-	};
-
-
-</script>
 
 </body>
 </html>
