added google+ publisher

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 			<p><img id="slogan" src ="img/its_heaven_in_hells_kitchen.png" alt="it's heaven in hell's kitchen" /> </p>
 			<div id="social-icons">
 				<a href="https://www.facebook.com/w42st"><img class="social-icon-img" src ="img/facebook.png" alt="social-icon-facebook" /></a>
-				<a href="https://plus.google.com/108593673981516853631/"><img class="social-icon-img" src ="img/googleplus.png" alt="social-icon-googleplus" /></a>
+				<a href="https://plus.google.com/108593673981516853631/" rel="publisher"><img class="social-icon-img" src ="img/googleplus.png" alt="social-icon-googleplus" /></a>
 				<a href="http://instagram.com/w42st"><img class="social-icon-img" src ="img/instagram.png" alt="social-icon-instagram" /></a>
 				<a href="https://twitter.com/w42st"><img class="social-icon-img" src ="img/twitter.png" alt="social-icon-twitter" /></a>
 			</div>
