--- a/social.html
+++ b/social.html
@@ -10,7 +10,7 @@
 <script>
     window.onload = function(event) {
         window.scrollTo(0,50);
-        //$('#feed-container').show();
+        $('#feed-holder', window.parent.document).show();
     };
 </script>
 
