--- a/social.html
+++ b/social.html
@@ -7,16 +7,17 @@
 
 </head>
 <body style="height: 100%;">
-<script>
-    window.onload = function(event) {
-        window.scrollTo(0,50);
-        $('#feed-holder', window.parent.document).show();
-    };
-</script>
 
-<div id="feed-container" style="/*display: none;*/">
+<div id="feed-container">
 <script type="text/javascript" class="rebelmouse-embed-script" src="https://www.rebelmouse.com/static/js-build/embed/embed.js?site=w42st&height=800&flexible=0&dont_load_new_posts=0&more_button=0&post_limit=5&embed_type=sidebar&scrollbar_theme=default&show_rebelnav=0&theme=2002"></script>
 </div>
+
+<script>
+    $(document).ready(function() {
+        window.scrollTo(0,50);
+        parent.$('#facebook-feed').show();
+    });
+</script>
 
 </body>
 </html>
