dont show feed until it has loaded (fix for firefox)

--- a/social.html
+++ b/social.html
@@ -14,7 +14,7 @@
 
 <script>
     $(document).ready(function() {
-        window.scrollTo(0,50);
+        window.setTimeout("window.scrollTo(0,50)",500)
         parent.$('#facebook-feed').show();
     });
 </script>
