--- a/social.html
+++ b/social.html
@@ -14,7 +14,7 @@
 
 <script>
     $(document).ready(function() {
-        window.setTimeout("window.scrollTo(0,50)",50)
+        window.setTimeout("window.scrollTo(0,50)",50);
         parent.$('#facebook-feed').show();
     });
 </script>
