updated homepage text

--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
 			<div id="about-us">
 				<div id="about-us-container">
 					<p><img class="about-us-header" src ="img/about-us.png" alt="about-us" /></p>
-					<p>W42ST is a magazine, a Facebook page, Twitter and Instagram feeds and more besides – holding all these elements together are some people. We are all about Hell’s Kitchen, we live it, breathe it, drive it and are driven by it, we record it and report it. The magazine is available FREE in the tower lobbies & apartments, stores & markets,  hairdressers, restaurants, bars, delis, and diners all across the area. Our social media is updated constantly and is commented by the residents of Hell’s Kitchen whose lives we are on a mission to improve… through information, entertainment, through words and pictures. Get in touch to tell us what you like and what you'd like to see next.</p>
+					<p>W42ST is a hyperlocal media brand celebrating the residents, workers, visitors, and businesses of Hell’s Kitchen. We use high-quality print content and digital engagement to build genuine trust, making us intimately connected and invested in the fastest growing, most authentic area of New York City. Contact Bob Bruno on (929) 428-0767 or bob@w42st.com for Advertising/Guide Listing or Ruth Walker on ruth@w42st.com if you have an editorial enquiry.</p>
 				</div>
 			</div>
 
