linked emails and phone

--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
 			<div id="about-us">
 				<div id="about-us-container">
 					<p><img class="about-us-header" src ="img/about-us.png" alt="about-us" /></p>
-					<p>W42ST is a hyperlocal media brand celebrating the residents, workers, visitors, and businesses of Hell’s Kitchen. We use high-quality print content and digital engagement to build genuine trust, making us intimately connected and invested in the fastest growing, most authentic area of New York City. Contact Bob Bruno on (929) 428-0767 or bob@w42st.com for Advertising/Guide Listing or Ruth Walker on ruth@w42st.com if you have an editorial enquiry.</p>
+					<p>W42ST is a hyperlocal media brand celebrating the residents, workers, visitors, and businesses of Hell’s Kitchen. We use high-quality print content and digital engagement to build genuine trust, making us intimately connected and invested in the fastest growing, most authentic area of New York City. Contact Bob Bruno on <a class="aboutus" href="tel:+1-929-428-0767">(929) 428-0767</a> or <a class="aboutus" href="mailto:bob@w42st.com">bob@w42st.com</a> for Advertising/Guide Listing or Ruth Walker on <a class="aboutus" href="mailto:ruth@w42st.com">ruth@w42st.com</a> if you have an editorial enquiry.</p>
 				</div>
 			</div>
 
